# split-typing-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  typing_game.py
docs/superpowers/plans/: 2026-05-31-split-typing-cli.md  2026-06-23-realtime-adaptive.md
docs/superpowers/specs/: 2026-05-31-split-typing-cli-design.md  2026-06-23-realtime-adaptive-design.md
split_typing/: __init__.py  adaptive.py  cli.py  engine.py  input_capture.py  llm.py  prompts.py  reading.py  romaji.py  stats.py
tests/: test_adaptive.py  test_cli.py  test_engine.py  test_input_capture.py  test_llm.py  test_packaging.py  test_prompts.py  test_reading.py  test_readme.py  test_romaji.py  test_stats.py
