[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "split-typing-cli"
version = "0.2.0"
description = "Real-time, adaptive CLI typing trainer for split keyboards (with Japanese romaji support)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["pykakasi>=2.2"]

[project.scripts]
split-typing = "split_typing.cli:main"

[tool.setuptools]
packages = ["split_typing"]
